--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-transition-group": "^4.2.4",
     "axios": "^0.19.2",
     "firebase": "^7.9.1",
+    "html-react-parser": "^0.10.2",
     "prop-types": "^15.7.2",
     "re-base": "^4.0.0",
     "react": "^16.12.0",
